fix listgap

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -275,6 +275,7 @@ section {
             grid-template-areas: "imgbox pointbox";
             column-gap: 4%;
         }
+        gap: 80px;
     }
 }
 
